css: fix overflows

--- a/static/style.css
+++ b/static/style.css
@@ -83,11 +83,13 @@ code {
 
 }
 
+#mast,#content{
+  padding: 1em;
+}
 #mast {
   max-width: 60em;
   border-radius: 30px 30px 0 0;
   margin: 0  auto;
-  padding: 1em 3em;
   text-align: center;
 }
 #masthead {
@@ -135,7 +137,6 @@ ul.menu {
 
 #content {
   max-width: 60em;
-  padding: 1em 3em;
   border-radius: 0 0 30px 30px;
   margin: auto;
 }
